--- a/css/styles.css
+++ b/css/styles.css
@@ -1,18 +1,51 @@
+
 body {
-	background: #04A1BF;
 	text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Montserrat', Helvetica, sans-serif;
+	background: linear-gradient(#faaca8, #ddd6f3);
+	background-repeat: no-repeat;
+	background-size: 100% 105%;
+	height: 700px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
+.bg {
+	filter: blur(8px);
+}
+
+.wrapper {
+	/* border: 5px; */
+	border-radius: 10px; 
+	width: 40%;
+	height: 500px;
+	background-color: white;
+	box-shadow: 0 4px 20px 0 rgba(0,0,0,0.2);
+	transition: 0.3s;
+}
+
+.wrapper:hover {
+	box-shadow: 0 8px 32px 0 rgba(0,0,0,0.2);
+  }
+
+header {
+	background-color: #FA948E ;
+	border-radius: 10px 10px 0 0 ;
+	height: 65px;
+	
+}
 h1 {
-	color: #ffffff;
+	color: #3D3232;
 	text-transform: uppercase;
 	font-weight: 800;
+	margin-top: 0;
+	padding-top: 14px;
 }
 
 h2 {
     font-weight: 600;
-    color: lightyellow;
+    /* color: lightyellow; */
 }
 
 input {
